@@ -1,0 +1,1 @@
+ALTER TABLE minuetServer_server_stats ADD  exp_game_count INT UNSIGNED NOT NULL DEFAULT 0 AFTER game_count;
